--- a/jet/dashboard/templates/admin/index.html
+++ b/jet/dashboard/templates/admin/index.html
@@ -1,6 +1,8 @@
 {% extends "admin/base_site.html" %}
-{% load i18n admin_static jet_dashboard_tags static %}
+{% load i18n jet_dashboard_tags static %}
+<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 
+{% load static %}
 {% block html %}{% get_dashboard 'index' as dashboard %}{{ block.super }}{% endblock %}
 
 {% block extrastyle %}
